--- a/src/index.css
+++ b/src/index.css
@@ -28,16 +28,16 @@
 }
 
 @theme {
-  --color-blue-50: '#DFDFF0';
-  --color-blue-75: '#dfdff2';
-  --color-blue-100: '#F0F2FA';
-  --color-blue-200: '#010101';
-  --color-blue-300: '#4FB7DD';
+  --color-blue-50: #dfdff0;
+  --color-blue-75: #dfdff2;
+  --color-blue-100: #f0f2fa;
+  --color-blue-200: #010101;
+  --color-blue-300: #4fb7dd;
 
-  --color-violet-300: '#5724ff';
+  --color-violet-300: #5724ff;
 
-  --color-yellow-100: '#8e983f';
-  --color-yellow-300: '#edff66';
+  --color-yellow-100: #8e983f;
+  --color-yellow-300: #edff66;
 
   --font-robert-medium: 'robert-medium', sans-serif;
   --font-zentry: 'zentry', sans-serif;
@@ -78,8 +78,10 @@ body {
 }
 
 @utility special-font {
-  font-family: 'Zentry';
-  font-feature-settings: 'ss01' on;
+  b {
+    font-family: 'Zentry';
+    font-feature-settings: 'ss01' on;
+  }
 }
 
 @utility hero-heading {
