--- a/src/index.css
+++ b/src/index.css
@@ -162,12 +162,12 @@ body {
   @apply h-1 w-px rounded-full bg-white transition-all duration-200 ease-in-out;
 }
 
-@utility indicator-line.active {
-  animation: indicator-line 0.5s ease infinite;
+@utility active-indicator-line {
+  animation: indicator-line-x 0.5s ease infinite;
   animation-delay: calc(var(--animation-order) * 0.1s);
 }
 
-@keyframes indicator-line {
+@keyframes indicator-line-x {
   0% {
     height: 4px;
     transform: translateY(-0px);
